--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,30 @@ repositories {
 
 dependencies {
 
+    // for Parsing Html Pages
     implementation 'org.jsoup:jsoup:1.14.3'
+
+    // For Json Mapping
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+
+    // For Making Http Requests
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+    // For Handling Strings
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    // For Reducing boiler Plate Code
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+
+
+
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
