--- a/build.gradle
+++ b/build.gradle
@@ -50,3 +50,13 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.runtimeClasspath.collect{it.toURI().toString()}.join(' '),
+                'Main-Class': 'com.dhivakar.jiosaavnsongdownloader.SongDownloader'
+        )
+
+    }
+}
